crates/cli/tests/snapshots/lib__check@non_struct_idx.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/non_struct_idx.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/non_struct_idx.nemo
---
success: false
exit_code: 1
----- stdout -----
[10] Error: Tried to index into a non-struct type I32
   ╭─[ tests/check/non_struct_idx.nemo:2:6 ]
   │
 2 │   10.x;
   │      ┬  
   │      ╰── Tried to index into a non-struct type I32
───╯

[10] Error: Tried to index into a non-struct type I32
   ╭─[ tests/check/non_struct_idx.nemo:4:9 ]
   │
 4 │   set x.y = 10
   │         ┬  
   │         ╰── Tried to index into a non-struct type I32
───╯


----- stderr -----
Error: "Check failed with 2 errors"
