crates/cli/tests/snapshots/lib__check@pattern_type_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/pattern_type_mismatch.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/pattern_type_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[20] Error: This pattern can't match a value of type I32
   ╭─[ tests/check/pattern_type_mismatch.nemo:7:5 ]
   │
 7 │     V::S _ => {}
   │     ───┬──  
   │        ╰──── This pattern can't match a value of type I32
───╯


----- stderr -----
Error: "Check failed with 1 errors"
