crates/cli/tests/snapshots/lib__check@ty_arg_count_mismatch.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/ty_arg_count_mismatch.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/ty_arg_count_mismatch.nemo
---
success: false
exit_code: 1
----- stdout -----
[22] Error: Mismatched type arg count. Expected 2 arguments, but got 0
    ╭─[ tests/check/ty_arg_count_mismatch.nemo:15:11 ]
    │
 15 │   let x : Box = Box#[I32, I32]{ a = 1, b = 2 };
    │           ──┬─  
    │             ╰─── Mismatched type arg count. Expected 2 arguments, but got 0
────╯

[22] Error: Mismatched type arg count. Expected 2 arguments, but got 1
    ╭─[ tests/check/ty_arg_count_mismatch.nemo:16:11 ]
    │
 16 │   let x : Box[I32] = Box#[I32, I32]{ a = 1, b = 2 };
    │           ────┬───  
    │               ╰───── Mismatched type arg count. Expected 2 arguments, but got 1
────╯

[22] Error: Mismatched type arg count. Expected 2 arguments, but got 1
    ╭─[ tests/check/ty_arg_count_mismatch.nemo:17:3 ]
    │
 17 │   func#[I32](3);
    │   ──┬─  
    │     ╰─── Mismatched type arg count. Expected 2 arguments, but got 1
────╯

[22] Error: Mismatched type arg count. Expected 2 arguments, but got 1
    ╭─[ tests/check/ty_arg_count_mismatch.nemo:18:3 ]
    │
 18 │   Box#[I32] { a = 1, b = 2 };
    │   ─────────────┬────────────  
    │                ╰────────────── Mismatched type arg count. Expected 2 arguments, but got 1
────╯

[22] Error: Mismatched type arg count. Expected 1 argument, but got 2
    ╭─[ tests/check/ty_arg_count_mismatch.nemo:19:3 ]
    │
 19 │   List::Nil#[I32, Bool] {};
    │   ────────────┬───────────  
    │               ╰───────────── Mismatched type arg count. Expected 1 argument, but got 2
────╯


----- stderr -----
Error: "Check failed with 5 errors"
